rename (client)Adempiere to Gossip, launch, gossip.db.CConnectionDialog